--- a/Assignment_1.ipynb
+++ b/Assignment_1.ipynb
@@ -369,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 2,
    "metadata": {
     "id": "T5OxJRZ8uvR7"
    },
@@ -397,20 +397,22 @@
        "      <th></th>\n",
        "      <th>0</th>\n",
        "      <th>1</th>\n",
-       "      <th>2</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>1</td>\n",
-       "      <td>3</td>\n",
        "      <td>6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>1</td>\n",
        "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
        "      <td>5</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -418,19 +420,20 @@
        "</div>"
       ],
       "text/plain": [
-       "   0  1  2\n",
-       "0  1  3  6\n",
-       "1  1  5  5"
+       "   0  1\n",
+       "0  1  6\n",
+       "1  1  5\n",
+       "2  3  5"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "import pandas as pd\n",
-    "pd.DataFrame([[1,3,6],[1,5,5]])\n"
+    "pd.DataFrame([[1,6],[1,5],[3,5]])\n"
    ]
   },
   {
